package mapipbtest;

message ExecuteQuery {
	required string sqlQuery = 1;
}

message QueryResult {
	required int64 rows = 1;
	message Column {
		required string name = 1;
		enum Type {
			STRING = 1;
			INTEGER = 2;
			FLOAT = 3;
			BOOLEAN = 4;
			// more types added here...
		}

		required Type type = 2;
		repeated string stringValues = 10;
		repeated int64 intValues = 11;
		repeated double floatValues = 12;
		repeated double boolValues = 13;
	}

	repeated Column columns = 3;
}

